# RAG-QA

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  rag指标记录.md
app/: config.py  main.py
app/agent/: graph.py  nodes.py  state.py
app/api/: chat.py  documents.py
app/core/: cache.py  database.py  exceptions.py  response.py
app/models/: document.py
app/schemas/: chat.py  document.py
app/services/: chat_service.py  document_service.py  embedding_service.py  llm_provider.py  ragas_embed_adapter.py  rerank_service.py  text_splitter.py
static/: 404.html  chat.html  documents.html  index.html  login.html
static/css/: style.css
static/js/: auth.js  chat.js  common.js  documents.js
tests/: conftest.py  test_cache.py  test_chat.py  test_chunking.py  test_documents.py  test_embedding.py  test_hybrid_retrieval.py  test_incremental_update.py  test_query_rewrite.py
tests/eval/: run_eval.py  run_eval_ragas.py  test_rewrite_e2e.py
