[project]
name = "doc-qa-system"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb",
    "fastapi>=0.136.3",
    "flagembedding",
    "markdown",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pydantic>=2",
    "pydantic-settings>=2.14.1",
    "pymupdf",
    "python-docx",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2",
    "transformers>=4.44,<5",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
