[project]
name = "doc-qa-system"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb",
    "fastapi>=0.136.3",
    "flagembedding",
    "langchain>=1.3.9",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "markdown",
    "markitdown[docx]>=0.1.6",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pydantic>=2",
    "pydantic-settings>=2.14.1",
    "pymupdf",
    "pymupdf4llm>=1.27.2.3",
    "python-docx",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "requests>=2.31",
    "slowapi>=0.1.9",
    "sqlalchemy>=2",
    "sse-starlette>=3.4.4",
    "transformers>=4.44,<5",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
